Fixed logo on Safari.
Safari needs a width specification for SVG images. Added it to "100%" so that it will just go to whatever max-width is.

--- a/src/styles/MasterPage.module.less
+++ b/src/styles/MasterPage.module.less
@@ -8,11 +8,13 @@
 
 .FooterLogo {
   max-width: 50%;
+  width: 100%;
 }
 
 @media screen and (max-width: 1000px) {
   .FooterLogo {
     max-width: 100%;
+    width: 100%;
     margin: auto;
   }
   .MasterFooter {
@@ -38,7 +40,6 @@
   background-color: transparent;
   align-items: center;
   padding-top: 3rem;
-
 }
 
 .MasterFooter {
